--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@react-three/drei": "^9.64.0",
     "@react-three/fiber": "^8.12.0",
+    "@react-three/postprocessing": "^2.7.1",
+    "postprocessing": "^6.30.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.151.3"
